## Change history


### [2019/12/19]
*(fixed) Error when trying to copy to clipboard inside AutoCAD for DXF files saved with netDXF that contains the header variables $INTERFEREOBJVS and $INTERFEREVPVS, since this variables refer to visual style information that netDxf does not save. This variables will not be loaded in case they appear in a DXF.
*(fixed) After loading a DXF the layouts associated blocks will be renamed to strictly follow *Paper_Space, *Paper_Space0, *Paper_Space1,... 
*(fixed) Transforming an ellipse might not show the correct result under special circumstances.

### [2019/09/20]
* Added the main Viewport of the Layout, that was deleted in v2.3.0.
* The block description is now loaded and saved to the DXF.
* (fixed) Issue when renaming layouts.
* (fixed) Issue when removing layouts.

### [2019/09/09]
* (fixed) The LinearDimension block that represents the dimension drawing was not generated correctly. Now, the extension lines should not appear crossed under some circumstances.
* (fixed) The MathHelper methods PointInSegment will consider the start and end points as part of the segment.
* (fixed) The MathHelper method NormalizeAngle will not round almost zero angles automatically.

### [2019/08/30]
* (fixed) Hotfix for previous update. The DimensionStyle FitDimLineInside (DIMSOXD value) now is read correctly when it is part of a dimension style override.

### [2019/08/30]
* (fixed) The DimensionStyle FitDimLineInside (DIMSOXD value) was used incorrectly, when it was true is should be false and vice versa.

### [2019/08/16]
* (fixed) When a Block is created form a DxfDocument or DXF file, any Hatch entity that it may contain will have its associative property set to false.
          This will avoid problems when the same entity its associated to multiple hatches, or when any of any of its paths is defined by the intersection of several entities.